--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "axios": "^1.6.5",
     "cors": "^2.8.5",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.3.1",
     "ecpay_aio_nodejs": "^1.0.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "moment": "^2.30.1",
+    "mongoose": "^8.0.4",
+    "nodemon": "^3.0.2",
+    "short-unique-id": "^5.0.3"
   }
 }
